update mapping, service